# old-tutorial

./: .edit  .gitignore  LICENSE  README.md
doc/: Bluccino Concept.md  index.md
doc/ChangeLog/: changelog.md
mcore/02-ollv/: prj.conf
mcore/03-mcore/: CMakeLists.txt  README.rst
mcore/04-mcore/: CMakeLists.txt
mcore/05-mcore/: CMakeLists.txt  README.rst
mcore/06-mcore/: README.rst
mcore/07-mcore/: CMakeLists.txt  README.rst
mcore/99-mcore/: CMakeLists.txt  README.rst
nbasic/01-blinky/: README.rst
nbasic/02-button/: README.rst  prj.conf
nbasic/03-button/: CMakeLists.txt  README.rst
nbasic/04-button/: CMakeLists.txt  README.rst
nbasic/05-button/: README.rst
nsamples/03-mcore/: CMakeLists.txt  README.rst
nsamples/04-mcore/: CMakeLists.txt  README.rst
nsamples/05-mcore/: CMakeLists.txt  README.rst
power/01-simple/: simple.c
power/02-rgb/: bluccino.h  rgb.c
quicktour/02-blink/: README.rst
quicktour/02-tinyled/: CMakeLists.txt  README.rst
quicktour/03-ledtoggle/: CMakeLists.txt  README.rst
quicktour/03-tinyrgb/: CMakeLists.txt  README.rst
quicktour/04-rgbcycle/: CMakeLists.txt  README.rst
quicktour/06-attention/: CMakeLists.txt  README.rst
rapid/01-sos/: CMakeLists.txt
roadwork/12-quad++/: CMakeLists.txt  README.rst
roadwork/12-quad++/blucino/core/: ocore4.c
roadwork/12-quad++/blucino/cpp/: blucino.cpp  blucino.h
roadwork/12-quad++/blucino/src/: blapi.c
roadwork/12-quad++/src/: main.cpp
roadwork/13-emu++/: CMakeLists.txt  README.rst
roadwork/13-emu++/blucino/include/: blapi.h
roadwork/13-emu++/blucino/src/: blapi.c
(+479 files in other folders)
